--- a/public/challenges-content/intro-first-steps.html
+++ b/public/challenges-content/intro-first-steps.html
@@ -12,25 +12,25 @@
     <h2><i class="fas fa-tachometer-alt"></i>Niveaux de Difficulté</h2>
     <p>Toutes les challenges ne sont pas égaux. Nous les avons classifiées selon le niveau de menace et l'expertise requise. Choisissez judicieusement votre terrain d'affrontement.</p>
     <ul>
-        <li><strong>🟢 Facile :</strong> Idéal pour les débutants Ces challenges vous permettront de vous familiariser avec les outils et les concepts de base.</li>
+        <li><strong>🟢 Facile :</strong> Idéal pour les débutants. Ces challenges vous permettront de vous familiariser avec les outils et les concepts de base.</li>
         <li><strong>🟡 Intermédiaire :</strong> Pour ceux ayant déjà fait leurs preuves. Attendez-vous à des énigmes qui nécessitent une bonne connaissance des techniques et une réflexion plus approfondie.</li>
-        <li><strong>🔴 Avancé :</strong> Réservé à l'élite. Ces missions complexes exigeront une maîtrise technique et une méthodologie rigoureuse.</li>
-        <li><strong>💀 Expert :</strong> Le test ultime. Seuls les meilleurs parviendront à bout de ces défis, qui requièrent une expertise pointue et une créativité sans faille.</li>
+        <li><strong>🟠 Avancé :</strong> Réservé à l'élite. Ces missions complexes exigeront une maîtrise technique et une méthodologie rigoureuse.</li>
+        <li><strong>🔴 Expert :</strong> Le test ultime. Seuls les meilleurs parviendront à bout de ces défis, qui requièrent une expertise pointue et une créativité sans faille.</li>
     </ul>
 </section>
 
 <section class="content-block">
     <h2><i class="fas fa-sitemap"></i>Théâtres d'Opérations</h2>
     <p>Nos renseignements indiquent que les menaces sont réparties dans plusieurs secteurs. Vous devrez maîtriser différentes disciplines pour réussir :</p>
-    <ul>
-        <li><strong>Analyse Forensique :</strong> Plongez dans des scènes de crime numériques pour retrouver la trace des attaquants.</li>
-        <li><strong>Cryptographie :</strong> Déchiffrez les messages interceptés et brisez les algorithmes qui les protègent.</li>
-        <li><strong>Culture de la Sécurité :</strong> Exploitez le maillon faible humain à travers des scénarios d'ingénierie sociale.</li>
-        <li><strong>OSINT :</strong> Fouillez les sources d'information publiques pour déterrer des renseignements cruciaux.</li>
-        <li><strong>Sécurité Réseau :</strong> Identifiez les services vulnérables, analysez les flux et infiltrez les réseaux.</li>
-        <li><strong>Stéganographie :</strong> Révélez les messages cachés dans des images, des sons ou des textes anodins.</li>
-        <li><strong>Web Hacking :</strong> Exploitez les failles comme les injections SQL et les XSS pour prendre le contrôle.</li>
-    </ul>
+        <ul>
+            <li><strong>Analyse Forensique :</strong> Jouer au détective sur un ordinateur ou un téléphone pour trouver des indices après une cyberattaque.</li>
+            <li><strong>Cryptographie :</strong> L'art de rendre un message secret en le transformant en un code illisible sans la bonne clé.</li>
+            <li><strong>Culture de la Sécurité :</strong> Apprendre à ne pas se faire avoir par des ruses ou des manipulations visant à vous voler des informations (comme un mot de passe).</li>
+            <li><strong>OSINT :</strong> Enquêter sur quelqu'un ou quelque chose en utilisant uniquement des informations que l'on peut trouver publiquement sur Internet.</li>
+            <li><strong>Sécurité Réseau :</strong> Protéger la "maison numérique" (ton réseau Wi-Fi, par exemple) en verrouillant les portes et les fenêtres pour empêcher les intrus d'entrer.</li>
+            <li><strong>Stéganographie :</strong> Cacher un message secret à l'intérieur d'un fichier qui a l'air normal, comme une photo de chat. </li>
+            <li><strong>Web Hacking :</strong> Trouver et utiliser les "défauts de construction" d'un site web pour y entrer ou le contrôler.</li>
+        </ul>
 </section>
 
 <section class="content-block">
@@ -41,10 +41,20 @@
     <p>
         Votre objectif est simple : <strong>rejoindre notre serveur de communication et trouver le flag d'intégration.</strong>
     </p>
-    <div class="hint-block" style="text-align: center; padding: 15px;">
-        <p style="margin: 0;">
-            Rejoignez le serveur via ce lien sécurisé : <a href="https://discord.gg/MSct2UaWvw" target="_blank">https://discord.gg/MSct2UaWvw</a>
-        </p>
+</section>
+
+<section class="content-block">
+    <h2><i class="fas fa-download"></i>Artefacts Numériques Fournis</h2>
+    <div class="challenge-files">
+        <div class="file-item">
+            <div class="file-info">
+                <h4>Portail d'Administration Sécurisé</h4>
+                <p>Lien vers la page web à analyser.</p>
+            </div>
+            <a href="https://discord.gg/MSct2UaWvw" target="_blank" class="btn-glass" style="text-decoration: none; padding: 10px 15px; display: inline-block; text-align: center;">
+                <i class="fas fa-external-link-alt"></i> Accéder
+            </a>
+        </div>
     </div>
     <p>
         Challenge créé par Robbie.
