--- a/public/challenges-content/intro-first-steps.html
+++ b/public/challenges-content/intro-first-steps.html
@@ -12,8 +12,8 @@
     <h2><i class="fas fa-tachometer-alt"></i>Niveaux de Difficulté</h2>
     <p>Toutes les challenges ne sont pas égaux. Nous les avons classifiées selon le niveau de menace et l'expertise requise. Choisissez judicieusement votre terrain d'affrontement.</p>
     <ul>
-        <li><strong>🟢 Facile :</strong> Idéal pour les débutants. Ces challenges vous permettront de vous familiariser avec les outils et les concepts de base.</li>
-        <li><strong>🟡 Intermédiaire :</strong> Pour ceux ayant déjà fait leurs preuves. Attendez-vous à des énigmes qui nécessitent une bonne connaissance des techniques et une réflexion plus approfondie.</li>
+        <li><strong>🟢 Débutant :</strong> Idéal pour les débutants. Ces challenges vous permettront de vous familiariser avec les outils et les concepts de base.</li>
+        <li><strong>🟡 Initié :</strong> Pour ceux ayant déjà fait leurs preuves. Attendez-vous à des énigmes qui nécessitent une bonne connaissance des techniques et une réflexion plus approfondie.</li>
         <li><strong>🟠 Avancé :</strong> Réservé à l'élite. Ces missions complexes exigeront une maîtrise technique et une méthodologie rigoureuse.</li>
         <li><strong>🔴 Expert :</strong> Le test ultime. Seuls les meilleurs parviendront à bout de ces défis, qui requièrent une expertise pointue et une créativité sans faille.</li>
     </ul>
@@ -39,7 +39,7 @@
         Pour commencer, vous devez établir une communication sécurisée avec notre quartier général. C'est une étape cruciale pour recevoir les ordres futurs et collaborer avec d'autres agents.
     </p>
     <p>
-        Votre objectif est simple : <strong>rejoindre notre serveur de communication et trouver le flag d'intégration.</strong>
+        Votre objectif est simple : <strong>rejoindre notre serveur de communication et trouver le flag.</strong>
     </p>
 </section>
 
@@ -48,15 +48,12 @@
     <div class="challenge-files">
         <div class="file-item">
             <div class="file-info">
-                <h4>Portail d'Administration Sécurisé</h4>
-                <p>Lien vers la page web à analyser.</p>
+                <h4>Quartier général du Kr[HACK]en</h4>
+                <p>Lien vers le serveur</p>
             </div>
             <a href="https://discord.gg/MSct2UaWvw" target="_blank" class="btn-glass" style="text-decoration: none; padding: 10px 15px; display: inline-block; text-align: center;">
                 <i class="fas fa-external-link-alt"></i> Accéder
             </a>
         </div>
     </div>
-    <p>
-        Challenge créé par Robbie.
-    </p>
 </section>
