--- a/public/challenges-content/crypto-fermat-factorization.html
+++ b/public/challenges-content/crypto-fermat-factorization.html
@@ -35,11 +35,11 @@
         <h2><i class="fas fa-bullseye"></i>Briefing de Mission</h2>
         <p>Votre mission est de casser la clé publique afin de déchiffrer le message chiffré.</p>
         <ul>
-            <li><strong>Analyse :</strong> La sécurité d'une clé RSA repose sur la difficulté de factoriser son module $n$. Toute faiblesse dans la génération des nombres premiers $p$ et $q$ peut être exploitée.</li>
+            <li><strong>Analyse :</strong> La sécurité d'une clé RSA repose sur la difficulté de factoriser son module <code>n</code>code>. Toute faiblesse dans la génération des nombres premiers <code>p</code>code> et <code>q</code>code> peut être exploitée.</li>
             <li><strong>Objectif :</strong> Déchiffrer le contenu de <code>cipher.txt</code> pour récupérer le flag.</li>
         </ul>
         <div class="hint-block">
-            <p><i class="fas fa-lightbulb"></i> <strong>Indice :</strong> Challenge de factorisation de Fermat : $p$ et $q$ sont anormalement proches.</p>
+            <p><i class="fas fa-lightbulb"></i> <strong>Indice :</strong> Challenge de factorisation de Fermat : <code>p</code>code> et <code>q</code>code> sont anormalement proches.</p>
         </div>
     </section>
     
