--- a/public/challenges-content/crypto-hastad-broadcast.html
+++ b/public/challenges-content/crypto-hastad-broadcast.html
@@ -48,20 +48,13 @@
 
 <section class="content-block">
     <h2><i class="fas fa-bullseye"></i>Briefing de Mission</h2>
-    <p>Vous disposez de trois clés publiques <code>key1_pub.txt, key2_pub.txt, key3_pub.txt</code> et d'un texte chiffré <code>cipher.txt</code> </p>
+    <p>Vous disposez de trois clés publiques <code>key1_pub.txt</code>, <code>key2_pub.txt</code>, <code>key3_pub.txt</code> et d'un texte chiffré <code>cipher.txt</code> </p>
     <ul>
         <li><strong>Objectif :</strong> Récupérer le texte en clair (le drapeau) qui a été diffusé à l'identique aux trois destinataires.</li>
     </ul>
     <div class="hint-block">
         <p><i class="fas fa-lightbulb"></i> <strong>Indice :</strong> Attaque par diffusion de Håstad <code>(e=3)</code>. Étant donné trois clés publiques (n, e=3) et trois fois le même texte chiffré pour le même message en clair.</p>
     </div>
-</section>
-
-<section class="content-block">
-    <h2><i class="fas fa-flag"></i>Flag</h2>
-    <p>
-        Pour valider ce challenge, le flag à soumettre est le message déchiffré en clair.
-    </p>
     <p>
         Challenge créé par Tristan
     </p>
