--- a/public/challenges-content/crypto-short-cipher.html
+++ b/public/challenges-content/crypto-short-cipher.html
@@ -32,8 +32,8 @@
     <h2><i class="fas fa-bullseye"></i>Briefing de Mission</h2>
     <p>Votre mission est de casser la clé publique afin de déchiffrer le message chiffré.</p>
     <ul>
-        <li><strong>Analyse :</strong> La sécurité d'une clé RSA peut être compromise si l'exposant privé $d$ est particulièrement petit. Cette vulnérabilité peut être exploitée à l'aide de l'algorithme des fractions continues.</li>
-        <li><strong>Objectif :</strong> Récupérer $d$, puis déchiffrer le contenu de <code>cipher.txt</code> pour obtenir le drapeau.</li>
+        <li><strong>Analyse :</strong> La sécurité d'une clé RSA peut être compromise si l'exposant privé <code>d</code> est particulièrement petit. Cette vulnérabilité peut être exploitée à l'aide de l'algorithme des fractions continues.</li>
+        <li><strong>Objectif :</strong> Récupérer <code>d</code>, puis déchiffrer le contenu de <code>cipher.txt</code> pour obtenir le drapeau.</li>
     </ul>
     <div class="hint-block">
         <p><i class="fas fa-lightbulb"></i> <strong>Indice :</strong> Challenge de Wiener : ce RSA a été généré avec un exposant privé $d$ très petit.</p>
