--- a/public/challenges-content/crypto-short-cipher.html
+++ b/public/challenges-content/crypto-short-cipher.html
@@ -36,7 +36,7 @@
         <li><strong>Objectif :</strong> Récupérer <code>d</code>, puis déchiffrer le contenu de <code>cipher.txt</code> pour obtenir le drapeau.</li>
     </ul>
     <div class="hint-block">
-        <p><i class="fas fa-lightbulb"></i> <strong>Indice :</strong> Challenge de Wiener : ce RSA a été généré avec un exposant privé $d$ très petit.</p>
+        <p><i class="fas fa-lightbulb"></i> <strong>Indice :</strong> Challenge de Wiener : ce RSA a été généré avec un exposant privé <code>d</code> très petit.</p>
     </div>
     <p>
         Challenge créé par Tristan
